--- a/public/dwr/player-name-options.html
+++ b/public/dwr/player-name-options.html
@@ -1,59 +1,69 @@
 <datalist id="name_options">
     <option>AliGerBrap</option>
-    <option>AmazingToaster</option>
-    <option>Angel_FM</option>
+    <option>Angel FM</option>
+    <option>apexcorvid</option>
     <option>ArchfieldMonk</option>
-    <option>Asher1611</option>
-    <option>bismark189</option>
-    <option>bobski021</option>
+    <option>AsmadiGames</option>
+    <option>Bobski</option>
     <option>Braxous_Muse</option>
     <option>brianwilliams42</option>
     <option>CaptainGreen7</option>
     <option>cdinprov</option>
     <option>Centroid41</option>
-    <option>couch_23</option>
+    <option>Couch_23</option>
     <option>CrimsonAvix</option>
+    <option>CubegodHS</option>
     <option>Cyberdark86</option>
-    <option>Demerine</option>
     <option>DiabeetusThe2nd</option>
-    <option>drjayphd</option>
-    <option>Erimesi</option>
-    <option>Fryteeth</option>
+    <option>dk9146</option>
+    <option>Edgestream</option>
+    <option>fcoughlin</option>
     <option>Fearon Burgundy</option>
+    <option>fryteeth</option>
     <option>gameboyf9</option>
+    <option>garionoldwolf</option>
     <option>Guelph35</option>
-    <option>HighSpirits</option> 
-    <option>Invenerable</option>
-    <option>jackimuswedge</option>
+    <option>HighRofellos</option>
+    <option>Highspirits</option>
+    <option>Jackimus</option>
+    <option>jjschmidt77</option>	
     <option>jkoper</option>
-    <option>jman1865</option>
+    <option>Jman</option>
     <option>kaiten619</option>
     <option>KamionRenokai</option>
-    <option>Leggystarscream</option>
-    <option>lorgon</option>
+    <option>Kigalas</option>
     <option>LordoftheSynth</option>
+    <option>LoZCardsfan</option>
+    <option>Marashu</option>
     <option>Math_Girl718</option>
+    <option>mcgrew</option>
+    <option>MeleeWizard</option>
     <option>MisterHomes</option>
     <option>MonsieurSlime</option>
-    <option>nescardinality</option>
+    <option>NESCardinality</option>
+    <option>Niamek</option>
+    <option>Nimanva</option>
+    <option>nycguy</option>
+    <option>onefineday</option>
     <option>OPTLawyer</option>
+    <option>Pelador</option>
     <option>ryguy3745</option>
     <option>SassageLink83</option>
-    <option>Scorpion__Max</option>
     <option>ShneekeyTheLost</option>
+    <option>Shoobs</option>
     <option>sigmafan</option>
     <option>Smashy</option>
-    <option>sparkover</option>
+    <option>Sparkover</option>
     <option>The_Greenleaf_Effect</option>
+    <option>theamusedminiature</option>
     <option>thehangrycanuck</option>
     <option>theseawolf1</option>
     <option>Thilotilo</option>
-    <option>TristalMTG</option>
-    <option>Ursinedasyure</option>
+    <option>Tristal</option>
+    <option>up2ng</option>
+    <option>ursinedasyure</option>
     <option>VaeluV</option>
     <option>Vriaeliss</option>
-    <option>WillWagnerMusic</option>
-    <option>wolfman2000</option>
     <option>Xarnax42</option>
     <option>Zman050778</option>
-</datalist>
+</datalist> 	</datalist>
