Updated list for 2020 Summer Tournament

--- a/public/dwr/player-name-options.html
+++ b/public/dwr/player-name-options.html
@@ -66,4 +66,4 @@
     <option>Vriaeliss</option>
     <option>Xarnax42</option>
     <option>Zman050778</option>
-</datalist> 	</datalist>
+</datalist>
